--- a/source/components/o_FixedFooter/FixedFooter.scss
+++ b/source/components/o_FixedFooter/FixedFooter.scss
@@ -3,6 +3,7 @@
     position: relative;
     z-index: 3;
     padding: 0 10px 20px 10px;
+    margin-bottom: -1px;
 
     &__icons {
         display: flex;
