--- a/source/components/_App/App.scss
+++ b/source/components/_App/App.scss
@@ -8,38 +8,64 @@
 
         .hw_app__uppercontent {
             position: relative;
-            .hw_heading, .hw_text, a {
+
+            .hw_heading,
+            .hw_text,
+            a {
                 color: #FFFDFB;
                 text-decoration-color: #FFFDFB;
             }
         }
+
+        &:has(.hw_settings) {
+            .hw_heading, .hw_text, a {
+                color: #ffffff !important;
+                text-decoration-color: #242424;
+            }
+        }
+
         .hw_app__lowercontent {
             background: linear-gradient(#FF82BE, #9A366A);
-            &:has(.hw_trackmania) {
+
+            .hw_heading,
+            .hw_text,
+            a {
+                color: #FFFDFB;
+                text-decoration-color: #242424;
+            }
+
+            &:has(.hw_trackmania),
+            &:has(.hw_blender),
+            &:has(.hw_webdev),
+            &:has(.hw_downloads) {
                 background: white;
+
+                .hw_heading,
+                .hw_text,
+                a {
+                    color: #242424;
+                    text-decoration-color: #242424;
+                }
             }
-            &:has(.hw_webdev) {
-                background: linear-gradient(#b9e762 0%, #549420 100%);
-            }
+
             width: calc(100vW - 16px - 80px);
             left: -460px;
+
             @media only screen and (max-width: 1440px) {
                 left: -350px;
             }
+
             @media only screen and (max-width: 1280px) {
                 left: -180px;
                 right: 40px;
             }
+
             padding: 40px;
             position: relative;
             overflow-x: hidden;
             overflow-y: hidden;
             min-height: 300px;
             box-shadow: 0px -3px 6px 2px rgba(0, 0, 0, 0.4);
-            .hw_heading, .hw_text, a {
-                color: #FFFDFB;
-                text-decoration-color: #242424;
-            }
         }
 
         .hw_section__top {
@@ -54,10 +80,12 @@
             @media only screen and (max-width: 1440px) {
                 gap: 35px;
             }
+
             @media only screen and (max-width: 1280px) {
                 gap: 25px;
             }
         }
+
         .hw_section__item {
             display: flex;
             flex-direction: column;
@@ -68,46 +96,58 @@
             transition: transform .15s;
             cursor: pointer;
             user-select: none;
+
             img {
                 -webkit-user-drag: none;
                 height: 100px;
             }
+
             &:hover {
                 transform: scale(1.08);
             }
+
             &:active {
                 transform: scale(0.92);
             }
+
             .hw_button {
                 background-color: #FF8CB7;
                 border-radius: 6px;
             }
+
             &--active {
                 .hw_button {
                     background-color: #72C3BC;
                     border-radius: 6px;
                 }
+
                 cursor: default;
+
                 &:hover {
                     transform: scale(1.0);
                 }
+
                 &:active {
                     transform: scale(1.0);
                 }
             }
         }
     }
+
     &__maincontent {
         max-width: 920px;
         margin-left: 460px;
+
         @media only screen and (max-width: 1440px) {
             margin-left: 350px;
         }
+
         @media only screen and (max-width: 1280px) {
             margin-left: 180px;
             margin-right: 40px;
         }
     }
+
     &__background {
         bottom: 0px;
         left: -390px;
@@ -120,12 +160,14 @@
             left: -320px;
             max-height: 470px;
         }
+
         @media only screen and (max-width: 1280px) {
             left: -240px;
             max-height: 470px;
         }
     }
 }
+
 .hw_section__teaser {
     padding-top: 60px;
     padding-bottom: 40px;
@@ -133,7 +175,9 @@
     flex-direction: column;
     gap: 20px;
     margin: auto;
-    .hw_heading, .hw_paragraph {
+
+    .hw_heading,
+    .hw_paragraph {
         font-weight: 900;
         text-align: center;
         max-width: 790px;
@@ -145,13 +189,14 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    .hw_heading, .hw_paragraph {
+
+    .hw_heading,
+    .hw_paragraph {
         text-align: left;
     }
 }
 
-html, body {
-
-}
+html,
+body {}
 
 // height: calc(100vH - 60px - 60px);
