--- a/source/components/o_Images/Images.scss
+++ b/source/components/o_Images/Images.scss
@@ -1,14 +1,22 @@
 .hw_images {
-    display: flex;
-    flex-direction: row;
-    gap: 40px;
-    margin: 0 auto;
-    width: fit-content;
+    &__title {
+        text-align: center !important;
+        padding-bottom: 20px;
+    }
+    &__content {
+        display: flex;
+        flex-direction: row;
+        gap: 40px;
+        margin: 0 auto;
+        width: fit-content;
+    }
+
     &__section {
         display: flex;
         flex-direction: column;
         gap: 20px;
         max-width: 200px;
+
         img {
             height: 200px;
             width: 200px;
@@ -18,4 +26,3 @@
         }
     }
 }
-
