--- a/source/components/o_Trackmania/Trackmania.scss
+++ b/source/components/o_Trackmania/Trackmania.scss
@@ -94,7 +94,7 @@
             border-radius: 12px;
             margin-left: -10px;
         }
-        .hw_paragraph, .hw_button {
+        .hw_paragraph, .hw_link {
             .hw_text { color: black !important; }
             background-color: white;
             opacity: 0.9;
@@ -106,7 +106,7 @@
             border-top-left-radius: 12px;
             border-top-right-radius: 12px;
         }
-        .hw_button {
+        .hw_link {
             top: unset;
             left: unset;
             text-align: center;
