--- a/source/components/o_FixedFooter/FixedFooter.scss
+++ b/source/components/o_FixedFooter/FixedFooter.scss
@@ -4,6 +4,7 @@
     z-index: 3;
     padding: 0 10px 20px 10px;
     margin-bottom: -1px;
+    margin-top: auto;
 
     &__icons {
         display: flex;
