--- a/source/components/o_Downloads/Downloads.scss
+++ b/source/components/o_Downloads/Downloads.scss
@@ -1,4 +1,66 @@
 .hw_downloads {
+    padding: 0 15px 0 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 
+    &__section {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        @media only screen and (min-width: 740px) {
+            gap: 16px;
+        }
+    } 
+
+    &__title {
+        @media only screen and (max-width: 480px) {
+            letter-spacing: -2.1px;
+            font-size: 40px;
+            line-height: 42px;
+        }
+    }
+
+    &__heading {
+        text-align: left;
+        @media only screen and (min-width: 1440px) {
+            font-size: 50px;
+            line-height: 50px;
+        }
+    }
+
+    &__text {
+        text-align: left;
+        @media only screen and (min-width: 1440px) {
+            font-size: 23px;
+            line-height: 23px;
+            .hw_text {
+                font-size: inherit;
+                line-height: inherit;
+            }
+        }
+    }
+
+    &__sectionitem {
+        position: relative;
+    }
+
+    &__sectionlink {
+        position: absolute;
+        bottom: 0px;
+    }
+
+    @media only screen and (min-width: 480px) {
+        padding: 0 30px;
+        gap: 25px;
+    }
+    @media only screen and (min-width: 740px) {
+        padding: 0 40px;
+        gap: 35px;
+    }
+    @media only screen and (min-width: 1440px) {
+        padding: 0 60px;
+        gap: 50px;
+    }
 }
 
