--- a/source/components/o_Trackmania/Trackmania.scss
+++ b/source/components/o_Trackmania/Trackmania.scss
@@ -1,5 +1,5 @@
 .hw_trackmania {
-    padding: 0 15px 0 15px;
+padding: 0 15px 0 15px;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -39,6 +39,65 @@
                 line-height: inherit;
             }
         }
+    }
+
+    &__sectionitems {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+
+    &__sectionitem {
+        overflow: hidden;
+        position: relative;
+        width: fit-content;
+    }
+
+    &__sectionimg {
+        max-width: 100%;
+    }
+
+    &__sectionheading {
+        position: absolute;
+        top: 0px; 
+        left: 0px;
+        padding: 8px 0;
+
+        @media only screen and (min-width: 740px) {
+            font-size: 22px;
+            line-height: 22px;
+        }
+        @media only screen and (min-width: 1440px) {
+            font-size: 25px;
+            line-height: 25px;
+            padding: 12px 0;
+        }
+    }
+
+    &__sectionlinks {
+        padding: 10px;
+        width: calc(100% - 20px);
+        position: absolute;
+        bottom: 0px;
+        left: 0px;
+        display: flex;
+        flex-direction: row;
+        gap:10px;
+    }
+    
+    &__sectionlink {
+        padding: 6px 0;
+        text-decoration: underline;
+    }
+    
+    &__sectionheading, &__sectionlink {
+        display: block;
+        text-align: center;
+        background-color: #242424;
+        color: #ffffff;
+        width: 100%;
+        border-radius: 6px;
     }
 
     @media only screen and (min-width: 480px) {
